--- a/celigo_pipeline_automation_paper/templates/ilastik_template.j2
+++ b/celigo_pipeline_automation_paper/templates/ilastik_template.j2
@@ -1,8 +1,4 @@
-# activate Conda
-{{ ilastik_conda }}
-
-# activate Ilastik conda environment
-{{ ilastik_conda_environment }}
+#!/bin/bash
 
 # run Ilastik
 {{ run_ilastik }} --headless --project={{ ilp }} --output_format=tiff --export_source="Probabilities" --output_filename_format={{ output_path }} {{ image_path }}
